# PyFHD

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  README.md  environment.yml  pyfhd.yaml  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: black.yml  dockerhub.yaml
PyFHD/: pyfhd.py
PyFHD/beam_setup/: antenna.py  beam.py  beam_utils.py  mwa.py  setup.py
PyFHD/calibration/: calibrate.py  calibrate_qu_mixing.py  calibration_utils.py  vis_calibrate_subroutine.py
PyFHD/data_setup/: initialization.py  obs.py  params.py  uvfits.py
PyFHD/flagging/: flagging.py
PyFHD/gridding/: filters.py  gridding_utils.py  visibility_degrid.py  visibility_grid.py
PyFHD/healpix/: export.py  healpix_utils.py
PyFHD/io/: pyfhd_io.py  pyfhd_quickview.py  pyfhd_restore.py  pyfhd_save.py
PyFHD/plotting/: calibration.py  gridding.py  image.py
PyFHD/pyfhd_tools/: git_helper.py  parser.py  pyfhd_setup.py  pyfhd_utils.py  test_utils.py  unit_conv.py
PyFHD/resources/config/: pyfhd.yaml
PyFHD/resources/healpix/: EoR0_high_healpix_inds.h5  EoR0_high_healpix_inds_large.h5  EoR0_low_healpix_inds.h5
PyFHD/source_modeling/: vis_model_transfer.py
PyFHD/templates/: EoR0_high_healpix_inds.h5  EoR0_high_healpix_inds_3x.h5  EoR1_high_healpix_inds.h5  EoR1_low_healpix_inds.h5  convert_model_arr_to_sav.pro  fhd_calibration_only.pro  fhd_healpix_imaging.pro  general_calibration_only.pro  general_healpix_imaging.pro  healpix_snapshot_cube_generate_read_python.pro  vis_model_freq_split_read_python.pro
PyFHD/use_idl_fhd/: run_idl_fhd.py  use_idl_outputs.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/changelog/: changelog.md
docs/source/develop/: contribution_guide.md  idl_translation.md
docs/source/documentation/: documentation.rst
docs/source/examples/: examples.rst
fhd_core/calibration/: calculate_adaptive_gain.py  vis_calibrate_subroutine.py
fhd_core/gridding/: baseline_grid_locations.py  conjugate_mirror.py  dirty_image_generate.py  grid_beam_per_baseline.py  holo_mapfn_convert.py  interpolate_kernel.py  visibility_count.py  visibility_degrid.py  visibility_grid.py
fhd_core/setup_metadata/: fhd_save_io.py
fhd_output/fft_filters/: filter_uv_uniform.py
fhd_utils/: histogram.py  l_m_n.py  rebin.py  weight_invert.py
fhd_utils/FFT/: deriv_coefficients.py  fft_shift.py
fhd_utils/idl_tools/: array_match.py
fhd_utils/modified_astro/: meshgrid.py
input/: README.md
input/1088285600_example/: 1088285600.metafits  1088285600_example.yaml
output/: README.md
tests/: test_utils.py
tests/test_beam/: test_beam_image.py  test_gaussian_decomp.py
tests/test_calibration/: test_cal_auto_ratio_divide.py  test_cal_auto_ratio_remultiply.py  test_calculate_adaptive_gain.py  test_calibrate.py  test_calibrate_qu_mixing.py  test_resistant_mean.py  test_split_vis_weights.py  test_vis_baseline_hist.py  test_vis_cal_auto_fit.py  test_vis_cal_auto_init.py  test_vis_cal_bandpass.py  test_vis_cal_combine.py  test_vis_cal_polyfit.py  test_vis_cal_subtract.py  test_vis_calibration_apply.py  test_vis_calibration_flag.py  test_vis_calibration_subroutine.py  test_vis_extract_autocorr.py  test_vis_noise_calc.py
tests/test_data_setup/: test_extract_visibilities.py  test_obs.py  test_w_term.py
tests/test_fhd_utils/: test_array_match.py  test_deriv_coefficients.py  test_histogram.py  test_l_m_n.py  test_meshgrid.py  test_rebin.py  test_weight_invert.py
tests/test_flagging/: test_vis_flag.py  test_vis_flag_basic.py
tests/test_gridding/: test_visibility_degrid.py  test_visibility_grid.py
tests/test_healpix/: test_beam_image_cube.py  test_healpix_cnv_apply.py  test_healpix_cnv_generate.py  test_phase_shift_uv_image.py  test_vis_model_freq_split.py
tests/test_prep_scripts/: histogram_runner.pro  rebin_runner.pro  splitter.py  test_runner.sh
tests/test_pyfhd_tools/: test_array_match.py  test_deriv_coefficients.py  test_histogram.py  test_l_m_n.py  test_meshgrid.py  test_rebin.py  test_region_grow.py  test_resistant_mean.py  test_vis_weights_update.py  test_weight_invert.py
tests/test_quickview/: test_get_image_renormalization.py  test_quickview.py
tests/test_source_modeling/: test_vis_model_transfer.py
tutorials/: pyfhd.yaml
(+24 files in other folders)
