[project]
name = "PyFHD"
version = "1.0"
readme = "README.md"
license = { file = "LICENSE" }
description = "Python Fast Holograhic Deconvolution: A Python package that does fast-mode Epoch of Reionization analysis."
authors = [
    { name = "Joel Dunstan (SkyWa7ch3r)", email = "joel.g.w.dunstan@gmail.com"},
    { name = "Jack Line (JLBLine)"},
    { name = "Nichole Barry (nicholebarry)", email = "nichole.barry@unsw.edu.au"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "astropy>=6.1.7",
    "colorama>=0.4.6",
    "configargparse>=1.7",
    "h5py>=3.13.0",
    "healpy>=1.18.1",
    "importlib-resources>=6.5.2",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pyuvdata>=3.2.1",
    "scipy>=1.15.3",
]

[project.scripts]
pyfhd = "PyFHD.pyfhd:main"

[project.urls]
"Repository" = "https://github.com/ADACS-Australia/PyFHD"
"Documentation" = "https://pyfhd.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/ADACS-Australia/PyFHD/Issues"
"Changelog" = "https://pyfhd.readthedocs.io/en/latest/changelog/changelog.html"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "myst-parser>=4.0.1",
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "sphinx>=8.1.3",
    "sphinx-argparse>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling", "hatch-build-scripts"]
build-backend = "hatchling.build"

[[tool.hatch.build.hooks.build-scripts.scripts]]
out_dir = "."
work_dir = "."
artifacts = [
    "__git__.py"
]
commands = [
    'echo __git_commit__ = \"$(git rev-parse HEAD)\" > PyFHD/__git__.py',
    'echo __git_commit_date__ = \"$(git log -1 --format=%cd)\" >> PyFHD/__git__.py',
    'echo __git_branch__ = \"$(git rev-parse --abbrev-ref HEAD)\" >> PyFHD/__git__.py'
]
clean_artifacts = true

